--- a/beams.html
+++ b/beams.html
@@ -48,6 +48,7 @@
           <div class="form-row">
             <input type="text" id="beamNo" placeholder="Beam No / ID" />
             <input type="number" id="beamMeters" placeholder="Total Meters" />
+            <input type="date" id="beamStartDate">
             <button class="primary-btn" id="addBeamBtn">Add Beam</button>
           </div>
         </div>
@@ -58,3 +59,4 @@
     <script type="module" src="js/logout.js"></script>
   </body>
 </html>
+
