Added actual LoomTrack project files

--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
 
     <title>LoomTrack | Dashboard</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/workers.css">
+    
   </head>
   <body>
     <nav class="navbar">
@@ -30,10 +30,10 @@
     <div class="container">
       <div class="card wide-card">
         <h2 class="page-title">Dashboard</h2>
-        <h3 class="today-date" style="margin-top: 30px"></h3>
+        <h3 class="today-date" ></h3>
         <div class="summary-grid" id="todayStats"></div>
 
-        <h3 class="today-month" style="margin-top: 30px"></h3>
+        <h3 class="today-month" ></h3>
         <div class="summary-grid" id="monthStats"></div>
       </div>
     </div>
