--- a/factories.html
+++ b/factories.html
@@ -22,9 +22,8 @@
 
         <div class="content-body">
           <section class="action-card">
-            <h3 style="margin-bottom: 15px; color: #1a3a5f; font-size: 0.9rem">
-              SELECT FACTORY
-            </h3>
+            <h3 class="section-title">SELECT FACTORY</h3>
+
 
             <div class="input-group">
               <select id="factoryList" name="factorySelect">
@@ -35,7 +34,8 @@
             <button class="login-btn proceedBtn">PROCEED</button>
           </section>
 
-          <hr style="margin: 30px 0; border: 0; border-top: 1px solid #eee" />
+          <hr class="section-divider" />
+
 
           <section class="action-card">
             <h3 style="margin-bottom: 15px; color: #1a3a5f; font-size: 0.9rem">
@@ -56,11 +56,9 @@
               />
             </div>
 
-            <p
-              id="msg"
-              class="status-msg"
-              style="margin-top: 10px; font-size: 0.85rem"
-            ></p>
+            <p id="msg" class="status-msg"></p>
+
+
             <button id="createFactoryBtn" class="login-btn">
               CREATE FACTORY
             </button>
