--- a/beams.html
+++ b/beams.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>LoomTrack | Beam</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/workers.css">
+   
   </head>
   <body>
     <nav class="navbar">
@@ -33,22 +33,27 @@
         <h2 class="page-title">Beams</h2>
 
         <!-- MACHINE SELECT -->
-        <div class="form-row">
-          <select id="machineSelect">
-            <option value="">Select Machine</option>
-          </select>
+        <!-- MACHINE SELECT -->
+        <div class="section">
+          <h3 class="section-title">Select Machine</h3>
+          <div class="form-row">
+            <input
+              type="number"
+              id="machineNumberInput"
+              placeholder="Machine Number"
+            />
+          </div>
         </div>
 
         <!-- ACTIVE BEAM INFO -->
         <div id="beamInfo" class="beam-info"></div>
 
-
         <!-- ADD BEAM -->
         <div id="addBeamSection" style="display: none">
+          <h3 class="section-title">Add / Replace Beam</h3>
           <div class="form-row">
             <input type="text" id="beamNo" placeholder="Beam No / ID" />
             <input type="number" id="beamMeters" placeholder="Total Meters" />
-            <input type="date" id="beamStartDate">
             <button class="primary-btn" id="addBeamBtn">Add Beam</button>
           </div>
         </div>
@@ -59,4 +64,3 @@
     <script type="module" src="js/logout.js"></script>
   </body>
 </html>
-
