--- a/reports.html
+++ b/reports.html
@@ -5,7 +5,7 @@
 
     <title>LoomTrack | Report</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/workers.css" />
+   
   </head>
   <body>
     <!-- NAVBAR -->
@@ -72,7 +72,7 @@
 
 
 <!-- REPORT TABLE -->
-<div class="table-wrapper">
+<div class="table-wrapper report-table-scroll">
   <table class="data-table">
     <thead id="reportHead"></thead>
     <tbody id="reportBody"></tbody>
