--- a/beams.html
+++ b/beams.html
@@ -54,6 +54,8 @@
           <div class="form-row">
             <input type="text" id="beamNo" placeholder="Beam No / ID" />
             <input type="number" id="beamMeters" placeholder="Total Meters" />
+            <input type="date" id="beamStartDate">
+
             <button class="primary-btn" id="addBeamBtn">Add Beam</button>
           </div>
         </div>
