--- a/production.html
+++ b/production.html
@@ -48,13 +48,16 @@
         <div class="table-wrapper">
           <table class="data-table bulk-table">
             <thead>
-              <tr>
-                <th>Machine</th>
-                <th>Beam</th>
-                <th>Taka No</th>
-                <th>Meters</th>
-              </tr>
-            </thead>
+  <tr>
+    <th>Machine</th>
+    <th>Beam</th>
+    <th>Taka No</th>
+    <th>Meters</th>
+    <th>Type</th>
+    <th>Add</th>
+  </tr>
+</thead>
+
             <tbody id="bulkTableBody"></tbody>
           </table>
         </div>
@@ -64,27 +67,7 @@
         </button>
 
         <p id="infoText" class="info-text"></p>
-        <div class="form-row">
-          <button class="primary-btn" id="loadProductionBtn">
-            Load Production
-          </button>
-        </div>
-
-        <div class="table-wrapper">
-          <table class="data-table">
-            <thead>
-              <tr>
-                <th>Machine</th>
-                <th>Worker</th>
-                <th>Taka No</th>
-                <th>Meters</th>
-                <th>Shift</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <tbody id="productionTableBody"></tbody>
-          </table>
-        </div>
+        
       </div>
     </div>
 
